--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="main-container">
     <header>
         <div class="top-left"><img src="assets/logos/pizza.png" alt="logo" width="50" height="50"></div>
+        <div class="top-right"><i class='bx bxs-bell' style='color: #141010'  ></i></div>
     </header>
 </body>
 </html>
