--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         <div class="top-left"><img src="assets/logos/pizza.png" alt="logo" width="50" height="50"></div>
         <div class="top-right"><i class='bx bxs-bell' style='color: #141010'  ></i></div>
     </header>
+
+    <section>
+        
+    </section>
 </body>
 </html>
