--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <section>
-        <a href="login&signup.html"></a>
+        <a href="login&signup.html">Next Page</a>
     </section>
 </body>
 </html>
